<resources>
    <string name="app_name">EcoGamify</string>
    <string name="name">Lim Siew Mooi</string>
    <string name="user_Name">Name\n</string>
    <string name="enter_name">Name\n</string>
    <string name="gender_View">Gender\n</string>
    <string name="hintname" />
    <string name="Basic_info">Basic Info</string>
    <string name="contact_info">Contact Info\n</string>
    <string name="email">Email</string>
    <string name="phone">Phone\n</string>
    <string name="started_title">Hello You!</string>
    <string name="started_sub_title">
        Nice to meet you, come to enjoy your ecolife with us!
        <br><b>Login</b> if you already have an account.</br>
        <br><b>Register</b> to get started with the app.</br>
    </string>
    <string name="secure_safe_img">Secure Safe</string>
    <string name="illustration_im" />
    <string name="btn_register">REGISTER</string>
    <string name="illustration_img">Illustration Image</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login to app</string>


    <string name="login_sub_title">
        <font color="#00C9B8"><b>Login</b></font>
        if you already have an account.
    </string>
    <string name="login_email">Your email or username</string>
    <string name="login_password">Your password</string>
    <string name="login_forget_pw">Forgot Password</string>
    <string name="login_havent_account">
        I don\'t haven an account
        <font color="#00C9B8"><b>Register</b></font>
    </string>
    <string name="register_title">Create an account</string>

    <string name="register_sub_title">
        <font color="#00C9B8"><b>Register</b></font>
        to get start with the app.
    </string>
    <string name="register_fullname">Your fullname</string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="register_your_password">Input your password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="already_and_login">
        I already have an account
        <font color="#00C9B8"><b>Login</b></font>
    </string>
    <string name="btn_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beach_category">Cleaning Up The Environment</string>
    <string name="plant_native_category">Plant Native Species</string>
    <string name="recycle_category">Reduce, Reuse, Replace and Recycle</string>

    <string name="address_Info">Address Info</string>
    <string name="home_address">Address</string>
    <string name="work_address">Work\n</string>
    <string name="password">Password\n</string>
    <string name="password_info">Password\n</string>
    <string name="empty" />
    <string name="phone_hint">Phone Number</string>
    <string name="email_hint">Email Address</string>

    <string name="plant_badge">Plant\n</string>
    <string name="ocean_cleaning">Ocean Clean Up</string>
    <string name="score">../6</string>
    <string name="scorebar">Score</string>
    <string name="plantsroce">../6</string>
    <string name="recyclebadge">Recycle</string>
    <string name="recycle_sroce">../6\n</string>
    <string name="ecoGamify_top">EcoGamify</string>
    <string name="accomplishment_view">accomplishments</string>
    <string name="ocean_level1">New Skill!</string>
    <string name="requirement1">Collect 10 pieces of trash</string>
    <string name="button_next">Next</string>
    <string name="newSkill_requirement2">Participate in 1 beach cleaning events</string>
    <string name="finished_title">finished!\n</string>
    <string name="your_certificated">Here are your certificated</string>
    <string name="share_button">Share\n</string>
    <string name="ocean_level2">Clean Ambassador</string>
    <string name="ocean_level3">Ocean Supporter</string>
    <string name="ocean_requirement6">Save or clean up at least 5 pieces of trash</string>
    <string name="ocean_requirement5">Participate in at least five ocean cleaning event</string>
    <string name="ocean_level4">Ocean Guardian</string>
    <string name="ocean_level5">Ocean Enthusiast</string>
    <string name="ocean_level6">Eco Warrior</string>
    <string name="garbage1_add">+</string>
    <string name="garbage2_add">+</string>
    <string name="garbage3_add">+</string>
    <string name="garbage4_add">+</string>
    <string name="garbage5_add">+</string>
    <string name="garbage6_add">+</string>
    <string name="garbage1_amount_view">0</string>
    <string name="garbage2_amount_view">0</string>
    <string name="garbage3_amount_view">0</string>
    <string name="garbage4_amount_view">0</string>
    <string name="garbage5_amount_view">0</string>
    <string name="garbage6_amount_view">0</string>
    <string name="ocean_item_amount_title">Number of item</string>
    <string name="ocean_total_item_number">0</string>
    <string name="take_photo">Take a photo\n</string>
    <string name="garbage6_less">-</string>
    <string name="garbage5_less">-</string>
    <string name="garbage4_less">-</string>
    <string name="garbage3_less">-</string>
    <string name="garbage2_less">-</string>
    <string name="garbage1_less">-</string>
    <string name="work">Work Address\n</string>
    <string name="address">Address</string>
    <string name="password_field_description">Please enter your password</string>
    <string name="password_hint">"password "</string>
    <string name="work_address_hint">Work Address</string>
    <string name="work_address_description">Please enter your work address</string>



</resources>