<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlantNativeActivity">


    <ImageView
        android:id="@+id/appname"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="-5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_name" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:scrollIndicators="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigationbar" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/appname"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E5EFEF"
                app:layout_constraintTop_toBottomOf="appname">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nameConstraint"
                    android:layout_width="381dp"
                    android:layout_height="222dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="12dp"
                    android:background="#FFF8E1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="108dp"
                        android:layout_height="106dp"
                        android:src="@tools:sample/avatars"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/editTextText"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.32" />


                    <TextView
                        android:id="@+id/name"
                        android:layout_width="54dp"
                        android:layout_height="34dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/user_Name"
                        android:textSize="@dimen/name_size"
                        app:layout_constraintBottom_toTopOf="@+id/editTextText"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:ems="10"
                        android:inputType="text"
                        android:text="Name"
                        app:layout_constraintBottom_toTopOf="@+id/gender"
                        app:layout_constraintEnd_toStartOf="@+id/imageView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name" />


                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="67dp"
                        android:layout_height="31dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/gender_View"
                        android:textSize="@dimen/name_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextText" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/title_basic"
                    android:layout_width="159dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/Basic_info"
                    android:textSize="@dimen/title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/contactConstraint"
                    android:layout_width="381dp"
                    android:layout_height="222dp"
                    android:background="#FFF8E1"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameConstraint">


                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/email"
                        android:textSize="@dimen/name_size"
                        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <EditText
                        android:id="@+id/editTextTextEmailAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="150dp"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email_hint"
                        app:layout_constraintBottom_toTopOf="@+id/phone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/email"
                        app:layout_constraintTop_toBottomOf="@+id/email" />

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="76dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/phone"
                        android:textSize="@dimen/name_size"
                        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
                        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
                        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />


                    <EditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:inputType="phone"
                        android:hint="@string/phone_hint"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/phone"
                        app:layout_constraintTop_toBottomOf="@+id/phone" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="169dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/contact_info"
                    android:textSize="@dimen/title"
                    app:layout_constraintBottom_toTopOf="@+id/contactConstraint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameConstraint" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout3"
                    android:layout_width="369dp"
                    android:layout_height="127dp"

                    android:background="#FFF8E1"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contactConstraint">

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/home_address"
                        android:textSize="@dimen/name_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/enter_address"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="135dp"
                        android:ems="10"
                        android:hint="@string/work_address_hint"
                        android:inputType="text"
                        android:text="@string/address"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/address" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/address_info"
                    android:layout_width="184dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/address_Info"
                    android:textSize="@dimen/title"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contactConstraint"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/password"
                    android:layout_width="155dp"
                    android:layout_height="37dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="214dp"
                    android:text="@string/password"
                    android:textSize="@dimen/title"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout4"
                    android:layout_width="373dp"
                    android:layout_height="110dp"
                    android:background="#FFF8E1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="100dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/password_info"
                        android:textSize="@dimen/name_size"
                        app:layout_constraintBottom_toTopOf="@+id/enter_password"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/enter_password"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginEnd="130dp"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:text="@string/empty"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:hint="@string/password_hint" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>