<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5EFEF">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--Testing adding by yuvon-->
        <!--code review-->

        <!-- Content within the ScrollView -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="This is a long list of items that you can scroll through."
            android:contentDescription="Description of the scrollable content."
            />
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="377dp"
        android:layout_height="186dp"
        android:layout_marginBottom="40dp"
        android:background="#FFF8E1"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="108dp"
            android:layout_height="106dp"
            android:src="@tools:sample/avatars"
            tools:layout_editor_absoluteX="246dp"
            tools:layout_editor_absoluteY="22dp" />


        <TextView
            android:id="@+id/name"
            android:layout_width="54dp"
            android:layout_height="34dp"
            android:text="@string/user_Name"
            android:textSize="@dimen/name_size"
            app:layout_constraintBottom_toTopOf="@+id/editTextText"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="13dp" />


        <EditText
            android:id="@+id/editTextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="Name"
            app:layout_constraintBottom_toTopOf="@+id/gender"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />


        <TextView
            android:id="@+id/gender"
            android:layout_width="67dp"
            android:layout_height="31dp"
            android:text="@string/gender_View"
            android:textSize="@dimen/name_size"
            app:layout_constraintBottom_toTopOf="@+id/contact"
            app:layout_constraintStart_toStartOf="@+id/editTextText"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/title_basic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Basic_info"
        android:textSize="@dimen/title"
        app:layout_constraintEnd_toEndOf="@+id/contact"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="126dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="381dp"
        android:layout_height="156dp"
        android:background="#FFF8E1"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="459dp">


        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/name_size"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />


        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/phone"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="76dp"
            android:layout_height="35dp"
            android:text="@string/phone"
            android:textSize="@dimen/name_size"
            app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />


        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/phone"
            app:layout_constraintTop_toBottomOf="@+id/phone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/contact"
        android:layout_width="171dp"
        android:layout_height="42dp"
        android:text="@string/contact_info"
        android:textSize="@dimen/title"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="419dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
